--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sakura.js</title>
+  <title>Sakura</title>
   <link rel="stylesheet" href="dist/sakura.css">
 </head>
 <body>
 
   <script src="dist/sakura.js" text="text/javascript"></script>
   <script>
-    const sakura = new Sakura('body');
+    var sakura = new Sakura('body');
   </script>
 </body>
 </html>
